--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
   "compileOnSave": true,
   "compilerOptions": {
     "outDir": "",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": false,
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "removeComments": true,
-    "target": "es5",
+    "target": "es6",
     "typeRoots": [
       "node_modules/@types"
     ],
