--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "keywords": [],
     "description": "",
     "dependencies": {
+        "@types/sqlite3": "^3.1.5",
         "discord.js": "^11.4.2",
         "eslint": "^5.6.0",
         "sqlite3": "^4.0.6",
