--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "discord.js": "^11.4.2",
         "eslint": "^5.6.0",
         "sqlite3": "^4.0.6",
-        "typescript": "^3.4.5",
         "typings": "^2.1.1"
     },
     "devDependencies": {
         "@types/node": "^11.13.7",
-        "babel-preset-es2015": "^6.24.1"
+        "babel-preset-es2015": "^6.24.1",
+        "typescript": "^3.4.5"
     }
 }
