--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "discordbot",
-    "version": "1.0.0",
+    "name": "code_bar_bot",
+    "version": "0.1.0 - alfa",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "PerniCZek",
-    "license": "ISC",
+    "license": "Copyright © 2019 FSB PerniCZek",
     "keywords": [],
     "description": "",
     "dependencies": {
-        "@types/sqlite3": "^3.1.5",
         "discord.js": "^11.4.2",
-        "eslint": "^5.6.0",
-        "sqlite3": "^4.0.6",
-        "typings": "^2.1.1"
+        "sqlite3": "^4.0.6"
     },
     "devDependencies": {
         "@types/node": "^11.13.7",
+        "@types/sqlite3": "^3.1.5",
         "babel-preset-es2015": "^6.24.1",
-        "typescript": "^3.4.5"
+        "eslint": "^5.6.0",
+        "typescript": "^3.4.5",
+        "typings": "^2.1.1"
     }
 }
