--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Start CodeBarBot",
       "program": "${workspaceFolder}\\index.js",
       "outFiles": [
         "${workspaceFolder}/**/*.js"
