--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "code_bar_bot",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,7 @@
         "@types/sqlite3": "^3.1.5",
         "babel-preset-es2015": "^6.24.1",
         "eslint": "^5.6.0",
+        "tslint": "^5.16.0",
         "typescript": "^3.4.5",
         "typings": "^2.1.1"
     }
