--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "code_bar_bot",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,16 @@
     "description": "",
     "dependencies": {
         "discord.js": "^11.4.2",
-        "sqlite3": "^4.0.6"
+        "sqlite3": "^4.0.6" // r ??
     },
     "devDependencies": {
         "@types/node": "^11.13.7",
-        "@types/sqlite3": "^3.1.5",
+        "@types/sqlite3": "^3.1.5", // r ??
         "babel-preset-es2015": "^6.24.1",
+        "dotenv": "^8.0.0", // --save ??
         "eslint": "^5.6.0",
+        "firebase": "^5.11.1", // --save ??
+        "firebase-admin": "^7.3.0", // --save ??
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
         "typings": "^2.1.1"
